--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
     <!-- Hero Section -->
     <section class="hero">
         <h1>Awaryjne otwieranie drzwi i zamków</h1>
-        <p>Kontakt:<br>Konrad Gozdziewski:<br>+48 662 921 442</p>
+        <p>Kontakt:<br>Konrad Goździewski:<br>
+            tel:
+            <a id="tel" href="tel:+48662921442">
+                +48 662 921 442
+            </a>
+            </p>
+        </p>
         <button class="cta-button">Learn More</button>
     </section>
 
