--- a/index.html
+++ b/index.html
@@ -5,60 +5,64 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Slusarz Lublin Gozdziewski</title>
-    <link rel="stylesheet" href="styles.css"/>
-    <style>
-        
-    </style>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
     <!-- Header Section -->
     <header>
-        <div class="logo">SlusarzLublin</div>
-
+        <div class="logo">Slusarz-Lublin</div>
     </header>
 
-    <!-- Hero Section -->
-    <section class="hero">
-        <h1>Awaryjne otwieranie drzwi i zamków</h1>
-        <p>Kontakt:<br>Konrad Goździewski:<br>
-            tel:
-            <a id="tel" href="tel:+48662921442">
-                +48 662 921 442
-            </a>
+    <!-- Main content -->
+    <main>
+        <!-- Hero Section -->
+        <section class="hero">
+            <div class="hero-content">
+            <h1>Awaryjne otwieranie drzwi i zamków</h1>
+            <p>
+                Kontakt:<br>
+                Konrad Goździewski:<br>
+                tel:
+                <a id="tel" href="tel:+48662921442">+48 662 921 442</a>
             </p>
-        </p>
-        <button class="cta-button">Learn More</button>
-    </section>
+            </div>
+        </section>
 
-    <!-- Products Section -->
-    <section class="products">
-        <div class="product">
-            <img src="https://via.placeholder.com/300x200" alt="Product 1">
-            <div class="product-info">
-                <h2>Product One</h2>
-                <p>Elegant design meets powerful performance.</p>
+        <!-- Products Section -->
+        <section class="products">
+            <div class="product">
+                <img src="images/logo.png" alt="Product 1" style="width: 100%; height: 70px; object-fit: contain; display: block; margin: 0 auto; padding-top:10px ;">
+                <div class="product-info">
+                    <h2>O mnie</h2>
+                    <p>Od ponad 20 lat prowadzę firmę ślusarską, co pozwoliło mi zdobyć bogate doświadczenie w branży. Regularne wyjazdy do
+                    klientów umożliwiły mi spotkanie się z różnorodnymi nietypowymi przypadkami zablokowanych i zamkniętych drzwi. Dokładam
+                    wszelkich starań, aby świadczyć usługi ślusarskie na najwyższym poziomie jakości.</p>
+                </div>
             </div>
-        </div>
-        <div class="product">
-            <img src="https://via.placeholder.com/300x200" alt="Product 2">
-            <div class="product-info">
-                <h2>Product Two</h2>
-                <p>Innovative solutions for modern challenges.</p>
+            <div class="product">
+                <img src="images/Door-with-keys.jpg" alt="Product 1"
+                    style="width: 100%; height: 70px; object-fit: contain; display: block; margin: 0 auto; padding-top:10px ;">
+                <div class="product-info">
+                    <h2>Usługi</h2>
+                    <p>Specjalizuję się zarówno w awaryjnym otwieraniu zaciętych drzwi, jak i w profesjonalnym wykonawstwie oraz montażu
+                    ogrodzeń panelowych, siatkowych i innych konstrukcji metalowych.</p>
+                </div>
             </div>
-        </div>
-        <div class="product">
-            <img src="https://via.placeholder.com/300x200" alt="Product 3">
-            <div class="product-info">
-                <h2>Product Three</h2>
-                <p>Experience the future of technology.</p>
+            <div class="product">
+                <img src="images/clock.png" alt="Product 3" style="width: 100%; height: 70px; object-fit: contain; display: block; margin: 0 auto; padding-top:10px ;">
+                <div class="product-info">
+                    <h2>Czas pracy</h2>
+                    <p>Oferuję usługi 24 godziny na dobę, 7 dni w tygodniu, na terenie Lublina i okolic.</p>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </main>
 
     <!-- Footer Section -->
     <footer>
-        © 2025 MySite. All rights reserved.
+        © 2025 Slusarz-Lublin.
+        <a id="tel" href="tel:+48662921442">+48 662 921 442</a>
     </footer>
 </body>
 
