--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="name" content="width=device-width, initial-scale=1.0" />
+    <meta name="description"
+        content="Ślusarz Lublin Goździewski oferuje awaryjne otwieranie zamków z ponad 20 letnim doświadczeniem. Tel. +48 662 921 442 " />
     <title>Slusarz Lublin Gozdziewski</title>
     <link rel="stylesheet" href="styles.css" />
 </head>
@@ -22,8 +24,8 @@
             <h1>Awaryjne otwieranie drzwi i zamków</h1>
             <p>
                 Kontakt:<br>
-                Konrad Goździewski:<br>
-                tel:
+                
+                Tel:
                 <a id="tel" href="tel:+48662921442">+48 662 921 442</a>
             </p>
             </div>
