--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 <img src="images/logo.png" alt="Product 1" style="width: 100%; height: 70px; object-fit: contain; display: block; margin: 0 auto; padding-top:10px ;">
                 <div class="product-info">
                     <h2>O mnie</h2>
-                    <p>Od ponad 20 lat prowadzę firmę ślusarską, co pozwoliło mi zdobyć bogate doświadczenie w branży. Regularne wyjazdy do
-                    klientów umożliwiły mi spotkanie się z różnorodnymi nietypowymi przypadkami zablokowanych i zamkniętych drzwi. Dokładam
+                    <p>Od ponad 20 lat zajmujemy się ślusarstwem, co pozwoliło nam zdobyć bogate doświadczenie w branży. Regularne świadczenie usług dla
+                    klientów umożliwiły nam spotkanie się z różnorodnymi nietypowymi przypadkami zablokowanych i zamkniętych drzwi. Dokładamy
                     wszelkich starań, aby świadczyć usługi ślusarskie na najwyższym poziomie jakości.</p>
                 </div>
             </div>
