--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     style="width: 100%; height: 70px; object-fit: contain; display: block; margin: 0 auto; padding-top:10px ;">
                 <div class="product-info">
                     <h2>Usługi</h2>
-                    <p>Specjalizuję się zarówno w awaryjnym otwieraniu zaciętych drzwi, jak i w profesjonalnym wykonawstwie oraz montażu
+                    <p>Specjalizujemy się zarówno w awaryjnym otwieraniu zaciętych drzwi, jak i w profesjonalnym tworzeniu oraz montażu
                     ogrodzeń panelowych, siatkowych i innych konstrukcji metalowych.</p>
                 </div>
             </div>
@@ -55,7 +55,7 @@
                 <img src="images/clock.png" alt="Product 3" style="width: 100%; height: 70px; object-fit: contain; display: block; margin: 0 auto; padding-top:10px ;">
                 <div class="product-info">
                     <h2>Czas pracy</h2>
-                    <p>Oferuję usługi 24 godziny na dobę, 7 dni w tygodniu, na terenie Lublina i okolic.</p>
+                    <p>Oferujemy usługi 24 godziny na dobę, 7 dni w tygodniu, na terenie Lublina i okolic.</p>
                 </div>
             </div>
         </section>
