--- a/index.html
+++ b/index.html
@@ -5,8 +5,59 @@
     <meta charset="UTF-8" />
     <meta name="name" content="width=device-width, initial-scale=1.0" />
     <meta name="description"
-        content="Ślusarz Lublin Goździewski oferuje awaryjne otwieranie zamków z ponad 20 letnim doświadczeniem. Tel. +48 662 921 442 " />
+        content="Kontakt: Tel. +48 662 921 442. Ślusarz Lublin Goździewski oferuje awaryjne otwieranie zamków z ponad 20 letnim doświadczeniem. Naprawa, wstawianie zamków, awaryjne otwieranie.  " />
     <title>Slusarz Lublin Gozdziewski</title>
+    <meta name="keywords"
+        content="ślusarz Lublin, Lublin, usługi ślusarskie, dorabianie kluczy, ostrzenie narzędzi, naprawy zamków, ślusarz Lublin,
+            usługi ślusarskie Lublin,
+            dorabianie kluczy Lublin,
+            naprawa zamków Lublin,
+            ostrzenie narzędzi Lublin,
+            ostrzenie noży Lublin,
+            ślusarstwo Lublin,
+            zakład ślusarski Lublin,
+            ślusarz,
+            profesjonalny ślusarz Lublin,
+            usługi ślusarskie 24h Lublin,
+            awaryjny ślusarz Lublin,
+            naprawa zamków drzwiowych Lublin,
+            wymiana zamków Lublin,
+            dorabianie kluczy samochodowych Lublin,
+            naprawa zamków samochodowych Lublin,
+            usługi ślusarskie dla firm Lublin,
+            ślusarz domowy Lublin,
+            naprawa zamków antywłamaniowych Lublin,
+            usługi ślusarskie dla mieszkańców Lublina,
+            ślusarz z dojazdem Lublin,
+            naprawa zamków biurowych Lublin,
+            dorabianie kluczy do sejfów Lublin,
+            naprawa sejfów Lublin,
+            usługi ślusarskie dla szkół Lublin,
+            naprawa zamków bramowych Lublin,
+            wymiana zamków bramowych Lublin,
+            ślusarz awaryjny 24/7 Lublin,
+            naprawa zamków do drzwi wejściowych Lublin,
+            dorabianie kluczy do mieszkań Lublin,
+            naprawa zamków do mieszkań Lublin,
+            usługi ślusarskie dla klientów indywidualnych Lublin,
+            naprawa zamków do drzwi garażowych Lublin,
+            wymiana zamków do drzwi garażowych Lublin,
+            ślusarz z doświadczeniem Lublin,
+            naprawa zamków do drzwi antywłamaniowych Lublin,
+            dorabianie kluczy do biurek Lublin,
+            naprawa zamków do biurek Lublin,
+            usługi ślusarskie dla instytucji publicznych Lublin,
+            naprawa zamków do szaf Lublin,
+            wymiana zamków do szaf Lublin,
+            ślusarz z rekomendacjami Lublin,
+            naprawa zamków do skrzynek pocztowych Lublin,
+            dorabianie kluczy do skrzynek pocztowych Lublin,
+            naprawa zamków do bram wjazdowych Lublin,
+            wymiana zamków do bram wjazdowych Lublin,
+            usługi ślusarskie dla wspólnot mieszkaniowych Lublin,
+            naprawa zamków do drzwi wewnętrznych Lublin,
+            wymiana zamków do drzwi wewnętrznych Lublin,
+            ślusarz z certyfikatami Lublin ">
     <link rel="stylesheet" href="styles.css" />
 </head>
 
