--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="name" content="width=device-width, initial-scale=1.0" />
+
     <meta name="description"
-        content="Kontakt: Tel. +48 662 921 442. Ślusarz Lublin Goździewski oferuje awaryjne otwieranie zamków z ponad 20 letnim doświadczeniem. Naprawa, wstawianie zamków, awaryjne otwieranie.  " />
-    <title>Slusarz Lublin Gozdziewski</title>
+        content="Kontakt: Tel. +48 662 921 442. Ślusarz Goździewski na terenie Lublina oferuje awaryjne otwieranie zamków. Ponad 20 letnie doświadczenie. Naprawa zamków, wstawianie zamków, wymiana zamków, awaryjne otwieranie drzwi.
+        usługi ślusarskie, dojazd do Lublina, dojazd i wymiana zamkniętych drzwi oraz złamanych kluczy.   " />
+
+    <title>Ślusarz-Lublin-Goździewski - Usługi ślusarskie na terenie Lublina</title>
     <meta name="keywords"
-        content="ślusarz Lublin, Lublin, usługi ślusarskie, dorabianie kluczy, ostrzenie narzędzi, naprawy zamków, ślusarz Lublin,
+        content="ślusarz Lublin, Lublin, usługi ślusarskie, dorabianie kluczy, ostrzenie narzędzi, naprawy zamków, ślusarz Lublin, złamany klucz
             usługi ślusarskie Lublin,
             dorabianie kluczy Lublin,
             naprawa zamków Lublin,
@@ -58,6 +61,7 @@
             naprawa zamków do drzwi wewnętrznych Lublin,
             wymiana zamków do drzwi wewnętrznych Lublin,
             ślusarz z certyfikatami Lublin ">
+
     <link rel="stylesheet" href="styles.css" />
 </head>
 
