--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <title>Ślusarz-Lublin-Goździewski - Usługi ślusarskie na terenie Lublina</title>
     <meta name="keywords"
-        content="ślusarz Lublin, Lublin, usługi ślusarskie, dorabianie kluczy, ostrzenie narzędzi, naprawy zamków, ślusarz Lublin, złamany klucz
+        content="ślusarz Lublin, Lublin, usługi ślusarskie, dorabianie kluczy, ostrzenie narzędzi, naprawy zamków, ślusarz Lublin, złamany klucz, klucze
             usługi ślusarskie Lublin,
             dorabianie kluczy Lublin,
             naprawa zamków Lublin,
