--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="name" content="width=device-width, initial-scale=1.0" />
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description"
         content="Kontakt: Tel. +48 662 921 442. Ślusarz Goździewski na terenie Lublina oferuje awaryjne otwieranie zamków. Ponad 20 letnie doświadczenie. Naprawa zamków, wstawianie zamków, wymiana zamków, awaryjne otwieranie drzwi.
         usługi ślusarskie, dojazd do Lublina, dojazd i wymiana zamkniętych drzwi oraz złamanych kluczy.   " />
