--- a/index.html
+++ b/index.html
@@ -89,10 +89,9 @@
 
     <!-- Main content -->
     <main>
-        
         <section class="hero">
             <div class="hero-content">
-            <h1>Awaryjne otwieranie drzwi i zamków</h1>
+            <h1>Awaryjne otwieranie drzwi i zamków oraz złamanych kluczy</h1>
             <p>
                 Kontakt:<br>
                 
