--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="logo">Slusarz-Lublin</div>
     </header>
 
-    <!-- Main content -->
+    <!-- Main conten -->
     <main>
         <section class="hero">
             <div class="hero-content">
