--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
                         "image": "https://www.slusarz-lublin.pl/images/logo.png",
                         "address": {
                         "@type": "PostalAddress",
-                        "addressLocality": "Lublin", "Świdnik",
+                        "addressLocality": "Lublin"
+                        "addressRegion": "Lublin"
                         "addressCountry": "PL"
                         },
                         "telephone": "+48 662 921 442",
