--- a/index.html
+++ b/index.html
@@ -1,86 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="index, follow" />
     <meta name="description"
-        content="Ślusarz Lublin – awaryjne otwieranie drzwi i zamków 24h. Ponad 20 lat doświadczenia. Zadzwoń: +48 662 921 442.">
-    <title>Slusarz Lublin - Usługi ślusarskie na terenie Lublina</title>
-    <meta name="keywords"
-        content="ślusarz Lublin, Lublin, usługi ślusarskie, dorabianie kluczy, ostrzenie narzędzi, naprawy zamków, ślusarz Lublin, złamany klucz, klucze
-            usługi ślusarskie Lublin,
-            dorabianie kluczy Lublin,
-            naprawa zamków Lublin,
-            ostrzenie narzędzi Lublin,
-            ostrzenie noży Lublin,
-            ślusarstwo Lublin,
-            zakład ślusarski Lublin,
-            ślusarz,
-            profesjonalny ślusarz Lublin,
-            usługi ślusarskie 24h Lublin,
-            awaryjny ślusarz Lublin,
-            naprawa zamków drzwiowych Lublin,
-            wymiana zamków Lublin,
-            dorabianie kluczy samochodowych Lublin,
-            naprawa zamków samochodowych Lublin,
-            usługi ślusarskie dla firm Lublin,
-            ślusarz domowy Lublin,
-            naprawa zamków antywłamaniowych Lublin,
-            usługi ślusarskie dla mieszkańców Lublina,
-            ślusarz z dojazdem Lublin,
-            naprawa zamków biurowych Lublin,
-            dorabianie kluczy do sejfów Lublin,
-            naprawa sejfów Lublin,
-            usługi ślusarskie dla szkół Lublin,
-            naprawa zamków bramowych Lublin,
-            wymiana zamków bramowych Lublin,
-            ślusarz awaryjny 24/7 Lublin,
-            naprawa zamków do drzwi wejściowych Lublin,
-            dorabianie kluczy do mieszkań Lublin,
-            naprawa zamków do mieszkań Lublin,
-            usługi ślusarskie dla klientów indywidualnych Lublin,
-            naprawa zamków do drzwi garażowych Lublin,
-            wymiana zamków do drzwi garażowych Lublin,
-            ślusarz z doświadczeniem Lublin,
-            naprawa zamków do drzwi antywłamaniowych Lublin,
-            dorabianie kluczy do biurek Lublin,
-            naprawa zamków do biurek Lublin,
-            usługi ślusarskie dla instytucji publicznych Lublin,
-            naprawa zamków do szaf Lublin,
-            wymiana zamków do szaf Lublin,
-            ślusarz z rekomendacjami Lublin,
-            naprawa zamków do skrzynek pocztowych Lublin,
-            dorabianie kluczy do skrzynek pocztowych Lublin,
-            naprawa zamków do bram wjazdowych Lublin,
-            wymiana zamków do bram wjazdowych Lublin,
-            usługi ślusarskie dla wspólnot mieszkaniowych Lublin,
-            naprawa zamków do drzwi wewnętrznych Lublin,
-            wymiana zamków do drzwi wewnętrznych Lublin,
-            ślusarz z certyfikatami Lublin ">
+        content="Ślusarz Lublin 24h – awaryjne otwieranie drzwi i zamków, szybki dojazd, ponad 20 lat doświadczenia. Zadzwoń: +48 662 921 442." />
+    <title>Ślusarz Lublin 24h – Awaryjne Otwieranie Drzwi i Zamków</title>
+    <link rel="canonical" href="https://www.slusarz-lublin.pl/" />
+    <link rel="icon" href="/favicon.ico" />
 
+    <!-- Open Graph (dla Facebooka i innych) -->
+    <meta property="og:title" content="Ślusarz Lublin 24h – Awaryjne Otwieranie Drzwi i Zamków" />
+    <meta property="og:description"
+        content="Profesjonalny ślusarz z Lublina. Otwieranie zamków, wymiana, naprawa. Działamy 24/7. Tel: +48 662 921 442." />
+    <meta property="og:image" content="https://www.slusarz-lublin.pl/images/logo.png" />
+    <meta property="og:url" content="https://www.slusarz-lublin.pl/" />
+    <meta property="og:type" content="website" />
+
+
+    <!-- Structured Data -->
     <script type="application/ld+json">
-                    {
-                        "@context": "https://schema.org",
-                        "@type": "Locksmith",
-                        "name": "Ślusarz Lublin",
-                        "image": "https://www.slusarz-lublin.pl/images/logo.png",
-                        "address": {
-                        "@type": "PostalAddress",
-                        "addressLocality": "Lublin"
-                        "addressRegion": "Lublin"
-                        "addressCountry": "PL"
-                        },
-                        "telephone": "+48 662 921 442",
-                        "openingHours": "Mo-Su 00:00-23:59",
-                        "areaServed": "Lublin",
-                        "url": "https://www.slusarz-lublin.pl"
-                    }
+    {
+      "@context": "https://schema.org",
+      "@type": "Locksmith",
+      "name": "Ślusarz Lublin",
+      "image": "https://www.slusarz-lublin.pl/images/logo.png",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Lublin",
+        "addressRegion": "Lubelskie",
+        "addressCountry": "PL"
+      },
+      "telephone": "+48 662 921 442",
+      "openingHours": "Mo-Su 00:00-23:59",
+      "areaServed": "Lublin",
+      "url": "https://www.slusarz-lublin.pl"
+    }
     </script>
-                
 
     <link rel="stylesheet" href="styles.css" />
 </head>
+  
 
 <body>
     <!-- Header Section -->
