--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         content="Ślusarz Lublin 24h – awaryjne otwieranie drzwi i zamków, szybki dojazd, ponad 20 lat doświadczenia. Zadzwoń: +48 662 921 442." />
     <title>Ślusarz Lublin 24h – Awaryjne Otwieranie Drzwi i Zamków</title>
     <link rel="canonical" href="https://www.slusarz-lublin.pl/" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="images/logo slusarz lublin.jpg" />
 
     <!-- Open Graph (dla Facebooka i innych) -->
     <meta property="og:title" content="Ślusarz Lublin 24h – Awaryjne Otwieranie Drzwi i Zamków" />
