--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="index, follow" />
+    <title>Ślusarz Lublin | Usługi ślusarskie w Lublinie | Naprawa zamków | Awaryjne otwieranie drzwi</title>
     <meta name="description"
         content="Ślusarz Lublin 24h – awaryjne otwieranie drzwi i zamków, szybki dojazd, ponad 20 lat doświadczenia. Zadzwoń: +48 662 921 442." />
     <title>Ślusarz Lublin 24h – Awaryjne Otwieranie Drzwi i Zamków</title>
