--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <title>Ślusarz Lublin | Usługi ślusarskie w Lublinie | Naprawa zamków | Awaryjne otwieranie drzwi</title>
-    
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="index, follow" />
@@ -11,7 +11,7 @@
     <meta name="description"
         content="Ślusarz Lublin 24h – awaryjne otwieranie drzwi i zamków, szybki dojazd, ponad 20 lat doświadczenia. Zadzwoń: +48 662 921 442." />
     <link rel="canonical" href="https://www.slusarz-lublin.pl/" />
-    <link rel="icon" href="images/logo slusarz lublin.jpg" />
+    <link rel="icon" href="images/logo-slusarz-lublin.ico" />
 
     <!-- Open Graph (dla Facebooka i innych) -->
     <meta property="og:title" content="Ślusarz Lublin 24h – Awaryjne Otwieranie Drzwi i Zamków" />
