--- a/index.html
+++ b/index.html
@@ -96,6 +96,15 @@
             </div>
         </section>
     </main>
+    
+    <div class="seo-headings">
+        <h2>Ślusarz Lublin 24h – awaryjne otwieranie drzwi i samochodów</h2>
+        <h2>Naprawa i wymiana zamków Gerda – Lublin i okolice</h2>
+        <h2>Otwieranie samochodów Lublin – szybka i bezinwazyjna pomoc</h2>
+        <h2>Pogotowie ślusarskie Lublin – ślusarz z dojazdem 24/7</h2>
+        <h2>Profesjonalny ślusarz Lublin – naprawa zamków i wkładek</h2>
+    </div>
+    
 
     <!-- Footer Section -->
     <footer>
