--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
 
     <meta name="description"
-        content="Ślusarz Lublin 24h – awaryjne otwieranie drzwi i zamków, szybki dojazd, ponad 20 lat doświadczenia. Zadzwoń: +48 662 921 442." />
+        content="Zadzwoń: +48 662 921 442 | Ślusarz Lublin 24h – awaryjne otwieranie drzwi i zamków Konrad G. | Szybki dojazd | 20 lat doświadczenia. " />
     <link rel="canonical" href="https://www.slusarz-lublin.pl/" />
     <link rel="icon" href="images/logo-slusarz-lublin.ico" />
 
