lil change to button

--- a/index.html
+++ b/index.html
@@ -74,8 +74,10 @@
                 <h1>Ślusarz Lublin 24/7: Awaryjne Otwieranie Drzwi</h1>
                 <p>
                     Zatrzasnąłeś drzwi? Złamany klucz w zamku? Dojadę szybko i otworzę zamek bez uszkodzeń.
-                    <br>Natychmiastowa pomoc: <a href="tel:+48662921442">+48 662 921 442</a>
+                    <br>Zadzwoń: 
                 </p>
+                <div class="header-contact">
+                    <a href="tel:+48662921442">+48 662 921 442</a>  </div>
             </div>
         </section>
 
