--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <!-- CHANGED: The H1 is now focused on your primary service and location. This is the most important heading. -->
                 <h1>Ślusarz Lublin 24/7: Awaryjne Otwieranie Drzwi</h1>
                 <p>
-                    Zatrzasnąłeś drzwi? Złamany klucz w zamku? Dojadę szybko i otworzę zamek bez uszkodzeń.
+                    Zatrzasnąłeś drzwi? Złamany klucz w zamku?<br>Dojadę szybko i otworzę zamek bez uszkodzeń.
                     <br>Zadzwoń: 
                 </p>
                 <div class="header-contact">
