--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <!-- The logo is now a single clickable link containing both the image and the text -->
         <a href="https://slusarz-lublin.pl/" class="logo">
             <img src="images/logo-slusarz-lublin.jpg" alt="Logo Ślusarz Lublin">
-            <span>Ślusarz-Lublin.pl</span>
+            <span>Ślusarz Lublin</span>
         </a>
         <div class="header-contact">
             <a href="tel:+48662921442">+48 662 921 442</a>
