--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- CHANGED: Meta description is more direct and includes the 24/7 benefit. -->
     <meta name="description"
-        content="Potrzebny ślusarz w Lublinie? Zadzwoń: +48 662 921 442. Oferujemy awaryjne otwieranie drzwi, mieszkań i samochodów 24/7. Szybki dojazd, 20 lat doświadczenia." />
+        content="Ślusarz Lublin.Potrzebny ślusarz w Lublinie? Zadzwoń: +48 662 921 442. Oferujemy awaryjne otwieranie drzwi, mieszkań i samochodów 24/7. Szybki dojazd, 20 lat doświadczenia." />
     <link rel="canonical" href="https://slusarz-lublin.pl/" />
     <link rel="icon" href="images/logo-slusarz-lublin.ico" />
 
@@ -149,7 +149,7 @@
 
     <footer>
         <div class="container">
-            © 2025 Slusarz-Lublin.pl - Konrad G. | Pogotowie Ślusarskie
+            ©2005-2025 Slusarz-Lublin.pl - Konrad G. | Pogotowie Ślusarskie
             <a href="tel:+48662921442">Zadzwoń: +48 662 921 442</a>
         </div>
     </footer>
