--- a/index.html
+++ b/index.html
@@ -293,21 +293,18 @@
                 <div class="testimonials-grid">
                     <div class="testimonial-card">
                         <div class="testimonial-stars">★★★★★</div>
-                        <p>Zatrzasnęłam drzwi w środku nocy. Pan Konrad przyjechał w 25 minut i otworzył zamek bez
-                            żadnych uszkodzeń. Bardzo polecam!</p>
-                        <span class="testimonial-author">— Anna M., Lublin Czuby</span>
+                        <p>Bardzo dobry ślusarz, szybciutko załatwił sprawę</p>
+                        <span class="testimonial-author">— Jakub J.</span>
                     </div>
                     <div class="testimonial-card">
                         <div class="testimonial-stars">★★★★★</div>
-                        <p>Profesjonalna wymiana zamków Gerda w drzwiach antywłamaniowych. Szybko, sprawnie i w
-                            rozsądnej cenie. Na pewno wrócę w razie potrzeby.</p>
-                        <span class="testimonial-author">— Marek K., Świdnik</span>
+                        <p>Bardzo dobry ślusarz, szybko rozwiązał problem. Polecam!</p>
+                        <span class="testimonial-author">— Justyna W.</span>
                     </div>
                     <div class="testimonial-card">
                         <div class="testimonial-stars">★★★★★</div>
-                        <p>Kluczyki zatrzaśnięte w samochodzie na parkingu. Pan ślusarz otworzył auto w kilka minut, bez
-                            rysowania drzwi. Szybko i profesjonalnie.</p>
-                        <span class="testimonial-author">— Tomasz W., Lublin Bronowice</span>
+                        <p>Ślusarz jak ślusarz, zamek naprawił, ale gość wesoły, rozładował nerwową atmosferę</p>
+                        <span class="testimonial-author">— Krzysztof Ka</span>
                     </div>
                 </div>
             </div>
