--- a/uslugi/awaryjne-otwieranie-drzwi.html
+++ b/uslugi/awaryjne-otwieranie-drzwi.html
@@ -132,8 +132,12 @@
 
                         <p>Jako doświadczony ślusarz z <strong>ponad 20-letnim stażem</strong>, specjalizuję się w
                             szybkim i bezinwazyjnym otwieraniu wszystkich typów drzwi na terenie Lublina i okolic.
-                            Działam <strong>24 godziny na dobę, 7 dni w tygodniu</strong> — również w nocy, weekendy i
-                            święta.</p>
+                            Działam <span class="tooltip-trigger"><strong>24 godziny na dobę, 7 dni w tygodniu</strong>
+                                — również w nocy, weekendy i
+                                święta.<span class="tooltip-text">Czasami jestem zajęty i nie mogę odrazu odebrać
+                                    telefonu lub przyjechać proszę o wyrozumienie.</span></span>.
+
+                        </p>
 
                         <img src="../images/Door-with-keys.webp"
                             alt="Awaryjne otwieranie drzwi mieszkania w Lublinie — ślusarz przy pracy" width="700"
