--- a/index.html
+++ b/index.html
@@ -72,23 +72,23 @@
       "review": [
         {
           "@type": "Review",
-          "author": { "@type": "Person", "name": "Anna M." },
+          "author": { "@type": "Person", "name": "Jakub J." },
           "datePublished": "2025-12-15",
-          "reviewBody": "Zatrzasnęłam drzwi w środku nocy. Pan Konrad przyjechał w 25 minut i otworzył zamek bez żadnych uszkodzeń. Bardzo polecam!",
+          "reviewBody": "Bardzo dobry ślusarz, szybciutko załatwił sprawę.",
           "reviewRating": { "@type": "Rating", "ratingValue": "5", "bestRating": "5" }
         },
         {
           "@type": "Review",
-          "author": { "@type": "Person", "name": "Marek K." },
+          "author": { "@type": "Person", "name": "Justyna W." },
           "datePublished": "2025-11-20",
-          "reviewBody": "Profesjonalna wymiana zamków Gerda w drzwiach antywłamaniowych. Szybko, sprawnie i w rozsądnej cenie. Na pewno wrócę w razie potrzeby.",
+          "reviewBody": "Bardzo dobry ślusarz, szybko rozwiązał problem. Polecam!",
           "reviewRating": { "@type": "Rating", "ratingValue": "5", "bestRating": "5" }
         },
         {
           "@type": "Review",
-          "author": { "@type": "Person", "name": "Tomasz W." },
+          "author": { "@type": "Person", "name": "Krzysztof Ka" },
           "datePublished": "2025-10-08",
-          "reviewBody": "Kluczyki zatrzaśnięte w samochodzie na parkingu. Pan ślusarz otworzył auto w kilka minut, bez rysowania drzwi. Szybko i profesjonalnie.",
+          "reviewBody": "Ślusarz jak ślusarz, zamek naprawił, ale gość wesoły, rozładował nerwową atmosferę.",
           "reviewRating": { "@type": "Rating", "ratingValue": "5", "bestRating": "5" }
         }
       ]
