--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                ©2005–2026 slusarz-lublin.pl — Konrad G. | Pogotowie Ślusarskie Lublin
+                ©2005–2026 slusarz-lublin.pl — Konrad G. | Pogotowie Ślusarskie Lublin.
             </div>
         </div>
     </footer>
